--- a/main.html
+++ b/main.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div id="buttons">
+        <button class="btn" data-sound="applause">Applause</button>
+        <button class="btn" data-sound="boo">Boo</button>
+        <button class="btn" data-sound="gasp">Gasp</button>
+        <button class="btn" data-sound="tada">Tada</button>
+        <button class="btn" data-sound="victory">Victory</button>
+        <button class="btn" data-sound="wrong">Wrong</button>
+        <button class="stop">Stop</button>
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
